# derm-dif

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: analysis.yaml  models.yaml  protocol.yaml
paper/: final_report.tex  pre_analysis_plan.tex  refs.bib
rating-ui/: .gitignore  README.md  index.html  sample.json  vercel.json
scripts/: 01_pilot_calibration.py  02_query_models.py  03_fit_amortized.py  04_aggregate_dif.py  05_lltm.py  06_mechanism_and_refusal.py  07_configural_invariance.py  08_generative_stratified.py  09_per_model_fst_logistic.py  10_synthetic_validation.py  11_baselines.py  all_model_fst_accuracy.py  build_rating_manifest.py  check_responses.py  contingency_tables.py  dinov3_crossfit_probe.py  dinov3_extract_embeddings.py  lambda_sweep.py  power_simulation.py  prediction_distribution.py  preliminary_results.py  query_summary.py  run_aggregate_dif.sh  run_configural.sh  run_dinov3.sh  run_dinov3_refit.sh  run_irt.sh  run_irt_pruned.sh  run_lltm.sh  run_pilot.sh  run_pipeline_j9.sh  run_query_api.sh  run_query_vllm.sh  run_query_zeroshot.sh  run_robustness_sweeps.sh  run_sensitivity_reruns.sh  run_vllm_container.sh  sample_clinician_items.py  seed_sweep.py  setup_container.sh  (+2 more)
src/derm_dif/: __init__.py  parsing.py  query.py
src/derm_dif/data/: ddi.py  embeddings.py
src/derm_dif/dif/: aggregate.py  mechanism.py  per_item.py
src/derm_dif/irt/: amortized.py  lltm.py  traditional.py
tests/: test_aggregate_dif.py  test_amortized.py
